<resources>
    <string name="app_name">WanderLust</string>
    <string name="find_a_place">Find a Place</string>
    <string name="search">Search...</string>
    <string name="all_featured_locations">All Featured locations</string>
    <string name="Featured_location_desc">Most liked by the people who visited these places</string>
    <string name="view_all">View all</string>
    <string name="mostly_viewed">MOSTLY VIEWED</string>
    <string name="categories">Categories</string>
    <string name="nature">Nature</string>
    <string name="valley">Valley</string>
    <string name="home">Home</string>
    <string name="nav_search">Search</string>

    <string name="add_place">Add Place</string>
    <string name="login">Login</string>
    <string name="profile">Profile</string>

    <string name="share">Share</string>
    <string name="rate_us">Rate Us</string>
    <string name="about_us">About Us</string>
</resources>