<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/home"
            android:icon="@drawable/home_icon"/>

        <item
            android:id="@+id/nav_search"
            android:title="@string/nav_search"
            android:icon="@drawable/search_icon"/>

        <item
            android:id="@+id/nav_categories"
            android:title="@string/categories"
            android:icon="@drawable/nav_categories"/>

        <item
            android:id="@+id/nav_add_place"
            android:title="@string/add_place"
            android:icon="@drawable/nav_add_place"/>






    </group>

    <item android:title="@string/profile">

        <menu>

            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_login"
                    android:title="@string/login"
                    android:icon="@drawable/nav_login"/>

                <item
                    android:id="@+id/nav_profile"
                    android:title="@string/profile"
                    android:icon="@drawable/nav_profile"/>




            </group>

        </menu>



    </item>

    <item android:title="@string/about_us">

        <menu>

            <group android:checkableBehavior="none">
                <item
                    android:id="@+id/nav_share"
                    android:title="@string/share"
                    android:icon="@drawable/nav_share"/>

                <item
                    android:id="@+id/nav_rate_us"
                    android:title="@string/rate_us"
                    android:icon="@drawable/nav_rate"/>

                <item
                    android:id="@+id/nav_about_us"
                    android:title="@string/about_us"
                    android:icon="@drawable/nav_about"/>




            </group>

        </menu>



    </item>
</menu>