<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Dashboard"
    android:id="@+id/drawer_layout"
    android:layout_marginBottom="10dp"
    >

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:theme="@style/navTheme"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/white"
        app:headerLayout="@layout/menu_header"
        app:menu="@menu/main_menu"/>





    <LinearLayout
        android:id="@+id/contentView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#EAFFFB"
        android:orientation="vertical"
        >




    <RelativeLayout
        android:layout_width="match_parent"
        android:padding="10dp"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        android:layout_margin="10dp"
        >

        <ImageView
            android:id="@+id/nav_menu_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/navi_drawer"
            android:padding="5dp"
            android:layout_centerVertical="true"/>

        <ImageView
            android:layout_width="40dp"
            android:layout_centerVertical="true"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:padding="5dp"
            android:src="@drawable/plus_icon"
            android:background="#FFF1AB"/>


    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp">

                <TextView
                    android:id="@+id/find_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_centerHorizontal="true"

                    android:fontFamily="@font/amaranth"
                    android:text="@string/find_a_place"
                    android:textColor="@color/black"
                    android:textSize="28sp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_below="@id/find_text"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginBottom="20dp"
                    android:background="@color/white"
                    android:elevation="8dp"

                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="15dp"

                        android:text="@string/search" />

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="15dp"
                        android:padding="5dp"
                        android:src="@drawable/search_icon" />


                </RelativeLayout>





            </RelativeLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_marginTop="-20dp"
                >


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >

                    <RelativeLayout
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:background="@drawable/card_1"
                        android:layout_margin="10dp">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/top_icon"
                            android:layout_centerInParent="true" />



                    </RelativeLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:gravity="center_horizontal"
                        android:text="Top Visited"
                        android:padding="2dp"
                        android:textColor="@color/black"/>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >

                    <RelativeLayout
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:background="@drawable/card_2"
                        android:layout_margin="10dp">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/educational_icon"
                            android:layout_centerInParent="true" />



                    </RelativeLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:gravity="center_horizontal"
                        android:text="Educational"
                        android:padding="2dp"
                        android:textColor="@color/black"/>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >

                    <RelativeLayout
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:background="@drawable/card_3"
                        android:layout_margin="10dp">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/religional_icon"
                            android:layout_centerInParent="true" />



                    </RelativeLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:gravity="center_horizontal"
                        android:text="Religional"
                        android:padding="2dp"
                        android:textColor="@color/black"/>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >

                    <RelativeLayout
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:background="@drawable/card_4"
                        android:layout_margin="10dp">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/nature_icon"
                            android:layout_centerInParent="true" />



                    </RelativeLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:gravity="center_horizontal"
                        android:text="@string/nature"
                        android:padding="2dp"
                        android:textColor="@color/black"/>


                </LinearLayout>





            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:background="#EAFFFB"

                >

                <LinearLayout
                    android:id="@+id/featured_background"
                    android:layout_width="170dp"
                    android:layout_height="280dp"
                    android:background="@color/card1"
                    android:layout_margin="10dp"
                    android:orientation="vertical"

                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/all_featured_locations"
                        android:fontFamily="@font/amarante"
                        android:textSize="24sp"
                        android:textAllCaps="true"
                        android:textColor="#4E4D4D"
                        android:layout_marginTop="30dp"
                        android:layout_marginStart="10dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/Featured_location_desc"
                        android:textSize="15sp"
                        android:layout_margin="10dp"/>



                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/featured_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"

                    android:layout_toRightOf="@id/featured_background">


                </androidx.recyclerview.widget.RecyclerView>




            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp"
                android:padding="10dp"
                >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mostly_viewed"
                        android:layout_marginLeft="10dp"
                        android:fontFamily="@font/amarante"
                        android:textColor="@color/black"
                        android:textAllCaps="true"
                        android:textSize="20sp"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:text="@string/view_all"
                        android:layout_centerVertical="true"/>



                </RelativeLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/most_view_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginLeft="20dp"
                    >



                </androidx.recyclerview.widget.RecyclerView>



            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp"
                android:padding="10dp"
                >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/categories"
                        android:layout_marginStart="10dp"
                        android:fontFamily="@font/amarante"
                        android:textColor="@color/black"
                        android:textAllCaps="true"
                        android:textSize="20sp"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:text="@string/view_all"
                        android:layout_centerVertical="true"/>



                </RelativeLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/category_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginLeft="20dp"
                    >



                </androidx.recyclerview.widget.RecyclerView>



            </LinearLayout>
        </LinearLayout>

    </ScrollView>

    </LinearLayout>





</androidx.drawerlayout.widget.DrawerLayout>